--- a/Lesson_5_HomeWork/MainWindow.xaml
+++ b/Lesson_5_HomeWork/MainWindow.xaml
@@ -25,8 +25,8 @@
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel HorizontalAlignment="Center"  Grid.Row="1" Orientation="Horizontal">
-            <Button x:Name="updateButton" Content="Обновить" Click="updateButton_Click"/>
-            <Button x:Name="deleteButton" Content="Удалить" Click="deleteButton_Click"/>
+            <Button x:Name="updateButton" Content="Update" Click="updateButton_Click"/>
+            <Button x:Name="deleteButton" Content="Delete" Click="deleteButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
